<resources>
    <string name="app_name">IMaktab</string>
    <string name="about_app">Ilova haqida</string>
    <string name="home_comple">Bajarildi</string>
    <string name="to_choose">Tanlash</string>
    <string name="did_not_come">Kelmagan:</string>
    <string name="Class_schedule">Dars jadvali</string>
    <string name="current_date">Oy</string>
    <string name="terms_and_conditions">Tizimga kirayotganda Foydalanish shartlariga rozi bo‘lgan bo‘lasiz</string>
    <string name="Complaint">Shikoyat</string>
    <string name="Praise">Maqtov</string>
    <string name="behavior">Xulqi</string>
    <string name="today">Bugun</string>
    <string name="gpa_students">GPA (o’quvchilar)</string>
    <string name="mastering">O`zlashtirish</string>
    <string name="lesson_attendance">Dars Jadvali va Davomat</string>
    <string name="prices">Baholar</string>
    <string name="lesson">Dars</string>
    <string name="Notes">Eslatmalar</string>
    <string name="your_account">Hisobingiz:</string>
    <string name="filling">To‘ldirish +</string>
    <string name="messages">Xabarlar</string>
    <string name="payments">To`lovlar</string>
    <string name="settings">Sozlamalar</string>
    <string name="month">Yanvar</string>
    <string name="change_password">Parolni o’zgartitish</string>
    <string name="save">Saqlash</string>
    <string name="Turn_notifications">Push eslatmalarni o`chirib qo`yish</string>
    <string name="thanks">Raxmat</string>
    <string name="tel_number">telefon raqamiga kod yuborildi</string>
    <string name="re_send_code">Kodni qayta yuborish:</string>
    <string name="tomorrows_tasks">Ertangi uyga vazifalar</string>
    <string name="home_work">Uyga vazifa</string>
    <string name="rating">Baho</string>
    <string name="room">Xona</string>
    <string name="parents">Ota-ona</string>
    <string name="tasks_emaining_home">Qolgan uyga vazifalar</string>
    <string name="old_pass">Eski parol</string>
    <string name="new_pass">Yangi parolni kiriting</string>
    <string name="confirm_pass">Yangi parolni qaytadan kiriting</string>
    <string name="main">Asosiy</string>
    <string name="attendance">Davomat</string>
    <string name="januar">Yanvar</string>
    <string name="februare" >Fevral</string>
    <string name="march" >Mart</string>
    <string name="april">Aprel</string>
    <string name="may">May</string>
    <string name="june">Iyun</string>
    <string name="july">Iyul</string>
    <string name="august">Avgust</string>
    <string name="september" >Sentabr</string>
    <string name="october">Oktabr</string>
    <string name="november">Noyabr</string>
    <string name="december">Dekabr</string>
    <string name="password">Parol</string>
    <string name="phone_number">Telefon nomer</string>
    <string name="login">Kirish</string>
    <string name="monday">Dushanba</string>
    <string name="tuesday">Seshanba</string>
    <string name="wednesday">Chorshanba</string>
    <string name="thursday">Payshanba</string>
    <string name="friday">Juma</string>
    <string name="saturday">Shanba</string>
    <string name="general">Umumiy</string>
    <string name="scien">Fanlar</string>
    <string name="home_tommorow">Ertangi vazifalar</string>
    <string name="home_passed">O`tgan vazifalar</string>
    <string name="week_ratings">Haftalik baholar</string>
    <string name="secience_ratings">Fanlar bo`yicha baholar</string>
    <string name="date_week">sana</string>
    <string name="today_not">Bugun dars yo`q</string>
</resources>
