<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<item
    android:id="@+id/main"
    android:icon="@drawable/ic_main1"
    android:title="@string/main"
    android:state_checked="false"

    />
    <item
        android:id="@+id/table"
        android:icon="@drawable/ic_tablee"
        android:title="@string/Class_schedule"
        />
    <item
        android:id="@+id/home_work"
        android:icon="@drawable/ic_home_work"
        android:title="@string/home_work"
        />
    <item
        android:id="@+id/continuation"
        android:icon="@drawable/ic_davomat"
        android:title="@string/attendance"
        />
    <item
        android:id="@+id/rating"
        android:icon="@drawable/ic_baho"
        android:title="@string/prices"
        />

</menu>