<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginTop="@dimen/dp_25"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
     android:layout_marginStart="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        >
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_no_come"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenir_roman"
            android:text="@string/did_not_come"
           android:textColor="#A5ADC6"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="@dimen/sp_13"
            app:layout_constraintTop_toTopOf="parent"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_come_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenir_roman"
            android:text="15"
            android:textColor="#A5ADC6"
            app:layout_constraintStart_toEndOf="@+id/tv_no_come"
            android:textSize="@dimen/sp_13"
            app:layout_constraintTop_toTopOf="parent"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_subject_scien"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lesson"
            android:fontFamily="@font/avenir_roman"
            android:padding="@dimen/dp_8"
            android:background="@drawable/background_grey"
            android:layout_alignParentLeft="true"
            android:textColor="#005FFF"
            android:drawableEnd="@drawable/ic_click"
            android:paddingStart="@dimen/dp_20"
            android:gravity="right"

            app:layout_constraintEnd_toStartOf="@+id/tv_month"
            android:drawablePadding="@dimen/dp_10"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="@dimen/dp_10"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_date"
            android:padding="@dimen/dp_8"
            android:fontFamily="@font/avenir_roman"
            android:background="@drawable/background_grey"
            android:layout_alignParentLeft="true"
            android:textColor="#005FFF"
            android:drawableEnd="@drawable/ic_click"
            android:paddingStart="@dimen/dp_20"
            android:gravity="right"
            app:layout_constraintEnd_toEndOf="parent"
            android:drawablePadding="@dimen/dp_10"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="@dimen/dp_10"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_momonth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/month"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:text=""
        android:fontFamily="@font/avenir_roman"
        android:layout_marginTop="@dimen/dp_20"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_sciencess"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_14"
        android:layout_marginEnd="@dimen/dp_14"
        />

</LinearLayout>