<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <androidx.cardview.widget.CardView
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_78"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:elevation="@dimen/dp_10"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_78"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            >

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/im_settings_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:textColor="#005FFF"
                android:paddingStart="@dimen/dp_20"
                android:src="@drawable/ic_back_blue"
                android:layout_marginStart="@dimen/dp_21"
                android:layout_marginTop="@dimen/dp_22"
                android:padding="@dimen/dp_8"
                android:drawablePadding="@dimen/dp_10"
                />
            <TextView
                android:id="@+id/tv_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Sozlamalar"
                android:textStyle="bold"
                android:textColor="#000000"
                android:paddingTop="@dimen/dp_8"
                android:fontFamily="@font/avenir_roman"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_22"
                android:textSize="@dimen/sp_16"
                android:layout_toRightOf="@id/im_settings_back"
                />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_20"
        >
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_pass_change"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:textAllCaps="false"
            android:fontFamily="@font/avenir_roman"
            android:textStyle="bold"
            android:textColor="#000000"
            />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/tv_old_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_white"
            android:textColor="#B6B6B6"
            android:hint="@string/old_pass"
            android:fontFamily="@font/avenir_roman"
            android:padding="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_15"
            />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/tv_new_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_white"
            android:textColor="#B6B6B6"
            android:hint="@string/new_pass"
            android:padding="@dimen/dp_10"
            android:fontFamily="@font/avenir_roman"
            android:layout_marginTop="@dimen/dp_15"
            />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/tv_con_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_white"
            android:textColor="#B6B6B6"
            android:fontFamily="@font/avenir_roman"
            android:hint="@string/confirm_pass"
            android:padding="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_15"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_save_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_blue"
            android:layout_marginTop="@dimen/dp_20"
            android:padding="@dimen/dp_10"
            android:text="@string/save"
            android:fontFamily="@font/avenir_roman"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            />
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/tv_push"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Turn_notifications"
            android:checked="true"
            android:textSize="@dimen/sp_16"
            android:layout_marginTop="@dimen/dp_40"
            />

        <LinearLayout
            android:id="@+id/liner_flag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="@dimen/dp_40"
            android:layout_marginStart="@dimen/dp_82"
            android:layout_marginEnd="@dimen/dp_82"
            android:weightSum="3"
            >
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_en_set"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_lan_button"
                android:layout_marginEnd="@dimen/dp_5"
                android:text="Eng"
                android:layout_weight="1"
                android:textAllCaps="false"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_rus_set"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_lan_button"
                android:text="Рус"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_weight="1"
                android:textAllCaps="false"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_uz_set"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_lan_button"
                android:layout_marginStart="@dimen/dp_20"
                android:text="O`zb"
                android:layout_weight="1"
                android:gravity="center"
                android:textAllCaps="false"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
</androidx.core.widget.NestedScrollView>
