<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_20"
        android:orientation="vertical"
        >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prices"
            android:fontFamily="@font/avenir_roman"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="@dimen/sp_22"
            app:layout_constraintTop_toTopOf="parent"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_subject_ratings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lesson"
            android:fontFamily="@font/avenir_roman"
            android:padding="@dimen/dp_8"
            android:background="@drawable/background_grey"
            android:layout_alignParentLeft="true"
            android:textColor="#005FFF"
            android:drawableEnd="@drawable/ic_click"
            android:paddingStart="@dimen/dp_20"
            android:gravity="right"
           app:layout_constraintEnd_toStartOf="@+id/tv_month_ratings"
            android:drawablePadding="@dimen/dp_10"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="@dimen/dp_10"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_month_ratings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month"
            android:fontFamily="@font/avenir_roman"
            android:padding="@dimen/dp_8"
            android:background="@drawable/background_grey"
            android:layout_alignParentLeft="true"
            android:textColor="#005FFF"
            android:drawableEnd="@drawable/ic_click"
            android:paddingStart="@dimen/dp_20"
            android:gravity="right"
            app:layout_constraintEnd_toEndOf="parent"
            android:drawablePadding="@dimen/dp_10"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="@dimen/dp_10"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_subject_by_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenir_roman"
            android:text="@string/lesson"
            android:textColor="@android:color/black"
            android:layout_marginTop="@dimen/dp_15"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@drawable/bg_rv_full"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_1"
                    android:background="@color/colorBorder"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="4"
                android:id="@+id/liner_week_item"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_week_num"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="#"
                    android:fontFamily="@font/avenir_roman"
                    android:textColor="#000000"
                    android:gravity="center"
                    android:layout_weight="0.4"
                    android:textSize="@dimen/sp_13" />
                <View
                    android:layout_width="@dimen/dp_1"
                    android:layout_height="match_parent"
                    android:background="@color/colorBorder"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_week_subject"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.8"
                    android:textColor="#000000"
                  android:gravity="center"
                    android:fontFamily="@font/avenir_roman"
                    android:text="@string/current_date"
                    android:textSize="@dimen/sp_13" />
                <View
                    android:layout_width="@dimen/dp_1"
                    android:layout_height="match_parent"
                    android:background="@color/colorBorder"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_week_mark"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/avenir_roman"
                    android:padding="@dimen/dp_14"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/home_work"
                    android:textColor="#000000"
                    android:gravity="center"
                    />
                <View
                    android:layout_width="@dimen/dp_1"
                    android:layout_height="match_parent"
                    android:background="@color/colorBorder"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:gravity="center"
                    android:id="@+id/tv_subject_mark"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.8"
                    android:text="@string/rating"
                    android:fontFamily="@font/avenir_roman"
                    android:textColor="#000000"
                    android:textAlignment="center"
                    android:textSize="@dimen/sp_13" />
                <View
                    android:layout_width="@dimen/dp_1"
                    android:layout_height="match_parent"
                    android:background="@color/colorBorder"/>
            </LinearLayout>
            </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_mark_scien"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/item_week_mark"
            android:background="@drawable/bg_rv_list"
            tools:itemCount="15"
            />
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>